--- a/style.css
+++ b/style.css
@@ -229,7 +229,7 @@ h1 {
 .letter-froon { 
     width: 100%;
     height: 100%;
-    background: #fff; /* Color de la carta */
+    background: #fff;
     display: flex;
     flex-direction: column;
     justify-content: center;
